# hl-asheep

./: CHANGELOG.md  CMakeLists.txt  INSTALL.md
asheep/cl_dll/: ammo.cpp  ammohistory.cpp  cl_util.h  ev_hldm.cpp  ev_hldm.h  flashlight.cpp  health.cpp  hud.cpp  hud.h  view.cpp
asheep/cl_dll/hl/: hl_events.cpp  hl_weapons.cpp
asheep/dlls/: apache.cpp  barney.cpp  basemonster.h  cdll_dll.h  client.cpp  combat.cpp  crossbow.cpp  crowbar.cpp  egon.cpp  game.cpp  gamerules.cpp  gauss.cpp  genericmonster.cpp  h_battery.cpp  handgrenade.cpp  headcrab.cpp  healthkit.cpp  hgrunt.cpp  ichthyosaur.cpp  islave.cpp  items.cpp  monstermaker.cpp  monsters.cpp  mp5.cpp  player.cpp  player.h  python.cpp  rat.cpp  rpg.cpp  satchel.cpp  scientist.cpp  shotgun.cpp  skill.h  squadmonster.h  squeakgrenade.cpp  talkmonster.cpp  talkmonster.h  triggers.cpp  tripmine.cpp  util.h  (+4 more)
asheep/dlls/asheep/: 9mmm41a.cpp  adrian.cpp  archer.cpp  armor.cpp  asheep_globals.cpp  asheep_globals.h  asheep_map_fixes.cpp  asheep_map_fixes.h  asheep_messages.h  asheep_serverside_utils.h  asheep_triggers.cpp  asheep_weapons.cpp  barney9mmar.cpp  barney9mmhg.cpp  barneyhandgrenade.cpp  barneyshotgun.cpp  barniel.cpp  basemonsterrepel.cpp  basemonsterrepel.h  basemonsterwithheadcrabai.cpp  basemonsterwithheadcrabai.h  basemonsterwithichthyosaurai.cpp  basemonsterwithichthyosaurai.h  basemonsterwithichthyosaurai_constants.cpp  basemonsterwithichthyosaurai_constants.h  basemonsterwithsnarkai.cpp  basemonsterwithsnarkai.h  basemonsterwithzombieai.cpp  basemonsterwithzombieai.h  basemonsterwithzombieai_util.cpp  basemonsterwithzombieai_util.h  baseweaponarwithgrenadelauncher.cpp  baseweaponarwithgrenadelauncher.h  baseweapongrenade.cpp  baseweapongrenade.h  baseweaponmelee.cpp  baseweaponmelee.h  baseweaponpistol.cpp  baseweaponpistol.h  baseweaponshotgun.cpp  (+56 more)
asheep/dlls/wpn_shared/: hl_wpn_glock.cpp
cl_dll/: CMakeLists.txt  ammo.cpp  ammo_secondary.cpp  ammohistory.cpp  battery.cpp  ev_hldm.cpp  ev_hldm.h  flashlight.cpp  health.cpp  hud.cpp  hud.h  hud_spectator.cpp  train.cpp  view.cpp
cl_dll/hl/: hl_baseentity.cpp  hl_events.cpp  hl_weapons.cpp
cmake/: mod_config.h.in
dlls/: CMakeLists.txt  apache.cpp  barney.cpp  basemonster.h  cbase.h  cdll_dll.h  client.cpp  combat.cpp  crossbow.cpp  crowbar.cpp  effects.cpp  egon.cpp  game.cpp  gamerules.cpp  gauss.cpp  genericmonster.cpp  ggrenade.cpp  h_battery.cpp  handgrenade.cpp  headcrab.cpp  healthkit.cpp  hgrunt.cpp  hornetgun.cpp  ichthyosaur.cpp  islave.cpp  items.cpp  monstermaker.cpp  monsters.cpp  monsters.h  mp5.cpp  player.cpp  player.h  python.cpp  rat.cpp  rpg.cpp  satchel.cpp  scientist.cpp  shotgun.cpp  skill.h  sound.cpp  (+12 more)
dlls/asheep/: 9mmm41a.cpp  adrian.cpp  archer.cpp  armor.cpp  asheep_globals.cpp  asheep_globals.h  asheep_map_fixes.cpp  asheep_map_fixes.h  asheep_messages.cpp  asheep_messages.h  asheep_serverside_utils.h  asheep_triggers.cpp  asheep_weapons.cpp  barney9mmar.cpp  barney9mmhg.cpp  barneyhandgrenade.cpp  barneyshotgun.cpp  barniel.cpp  basemonsterrepel.cpp  basemonsterrepel.h  basemonsterwithheadcrabai.cpp  basemonsterwithheadcrabai.h  basemonsterwithichthyosaurai.cpp  basemonsterwithichthyosaurai.h  basemonsterwithichthyosaurai_constants.cpp  basemonsterwithichthyosaurai_constants.h  basemonsterwithsnarkai.cpp  basemonsterwithsnarkai.h  basemonsterwithzombieai.cpp  basemonsterwithzombieai.h  basemonsterwithzombieai_util.cpp  basemonsterwithzombieai_util.h  baseweaponarwithgrenadelauncher.cpp  baseweaponarwithgrenadelauncher.h  baseweapongrenade.cpp  baseweapongrenade.h  baseweaponmelee.cpp  baseweaponmelee.h  baseweaponpistol.cpp  baseweaponpistol.h  (+69 more)
dlls/wpn_shared/: hl_wpn_glock.cpp
pm_shared/: pm_shared.c
projects/vs2017/: asheep.sln  asheep_client.vcxproj  asheep_client.vcxproj.filters  asheep_server.vcxproj  asheep_server.vcxproj.filters
projects/vs2019/: hl_cdll.vcxproj  hl_cdll.vcxproj.filters  hldll.vcxproj  hldll.vcxproj.filters
